# reciping-data-pipeline

./: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  COMPLETE_LAKEHOUSE_DOCUMENTATION.md  Dockerfile  GOLD_LAYER_METRICS_IMPLEMENTATION_GUIDE.md  ICEBERG_ETL_IMPLEMENTATION_SUMMARY.md  README.md  S3_DATA_LAKEHOUSE_ARCHITECTURE.md  bronze_to_silver_dag.py  bronze_to_silver_final.py  bronze_to_silver_iceberg.py  bronze_to_silver_pipeline_fixed.py  bronze_to_silver_simple.py  bulk_runner.py  check_environment.sh  compatible_kst_fact_processor.py  create_data.ipynb  create_dims.py  create_event_logs.py  create_log_data - 복사본 (2).ipynb  create_log_data - 복사본 (3).ipynb  create_log_data - 복사본.ipynb  create_log_data 원본.ipynb  create_log_data.ipynb  debug_s3_connection.py  docker-compose.yml  entrypoint.sh  gold_layer_analytics.py  gold_layer_minimal.py  gold_layer_star_schema.py  iceberg_backfill_dag.py  iceberg_live_pipeline_dag.py  iceberg_pipeline_dag copy.py  iceberg_pipeline_dag star schema.py  iceberg_pipeline_dag.py  iceberg_replay_test_dag.py  iceberg_table_maintenance.py  improved_batch_processor.py  (+20 more)
archive/: ARCHIVE_GUIDE.md
archive/documentation/: ADVANCED_FEATURES_SUMMARY.md
archive/failed_iceberg_attempts/: bronze_to_silver_iceberg_local.py  bronze_to_silver_iceberg_simple.py  bronze_to_silver_iceberg_stable.py  gold_layer_analytics_advanced.py  test_iceberg_basic.py
archive/legacy_files/markdown_deprecated/: COMPLETE_PROJECT_DOCUMENTATION.md  FILE_CLEANUP_PLAN.md  GOLD_LAYER_EXECUTION_GUIDE.md  ICEBERG_ETL_IMPLEMENTATION_SUMMARY.md
archive/legacy_files/python_experimental/: check_conversion_results.py  date_range_gold_processor.py  gold_layer_complete.py  gold_layer_practical.py  gold_layer_safe.py  gold_layer_star_schema.py  ultra_batch_processor.py
archive/old_versions/: bronze_to_silver.py  upload_events_to_s3.py
archive/test_files/: test_spark.py
create_data/: README.md  create_event_logs.py  create_log_data.ipynb  replay_fast_sequential_producer.sh
dags/: replay_september_15min_dag.py
docs/adr/: 001-self-hosted-ec2.md  002-apache-iceberg.md  003-star-schema.md
spark/bulk_insert_jobs/: bronze_to_silver_iceberg.py  bulk_runner.py  create_dims.py  silver_to_gold_processor.py  staging_to_bronze_iceberg.py
spark/replay_jobs/: replay_bronze_to_silver.py  replay_silver_to_gold backup.py  replay_silver_to_gold.py  replay_staging_to_bronze.py
sql_queries/: DAU.sql  README.md  WAU.sql  ab_test_heatmap.sql  ab_test_kpi_metric.sql  click_ads_funnel.sql  ctr_advertisement.sql  daily_ab_test.sql  daily_engagement_score.sql  daily_events.sql  daily_search_to_recipe_click.sql  event_distribution.sql  events_per_time.sql  interactions_per_dish_type.sql  lift.sql  new_data_load_date.sql  pages_views.sql  time_x_day_events_heatmap.sql  top_10_bookmarked_recipe.sql  top_10_clicked_recipe.sql  top_10_interactions_per_events.sql  treatment_vs_control.sql
