[project]
name = "de"
version = "0.1.0"
description = ""
authors = [
    {name = "benidjor",email = "benidjor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faker (>=37.1.0,<38.0.0)",
    "sdv (>=1.20.1,<2.0.0); python_version < '3.14'",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
    "distributed (>=2025.5.1,<2026.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "elasticsearch (>=9.0.1,<10.0.0)",
    "s3fs (>=2025.5.1,<2026.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "kafka-python (>=2.2.11,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

