[tool.poetry]
# [project] 섹션의 내용이 이쪽으로 이동했습니다.
name = "de"
version = "0.1.0"
description = ""
authors = ["benidjor <benidjor@gmail.com>"] # authors 형식이 문자열 리스트로 변경되었습니다.
readme = "README.md"
package-mode = false  # 이 줄을 추가하세요!


[tool.poetry.dependencies]
# requires-python이 python으로 변경되고, 의존성 목록이 이 섹션으로 이동했습니다.
python = ">=3.11"
numpy = ">=2.2.5,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
requests = ">=2.32.3,<3.0.0"
tenacity = ">=9.1.2,<10.0.0"
tqdm = ">=4.67.1,<5.0.0"
dotenv = ">=0.9.9,<0.10.0"
faker = ">=37.1.0,<38.0.0"
sdv = { version = ">=1.20.1,<2.0.0", python = "<3.14" } # 특정 파이썬 버전에만 설치되는 경우의 표현법입니다.
beautifulsoup4 = ">=4.13.4,<5.0.0"
requests-html = ">=0.10.0,<0.11.0"
lxml-html-clean = ">=0.4.2,<0.5.0"
selenium = ">=4.32.0,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
category-encoders = ">=2.8.1,<3.0.0"
pyarrow = ">=20.0.0,<21.0.0"
dask = ">=2025.5.1,<2026.0.0"
distributed = ">=2025.5.1,<2026.0.0"
bokeh = ">=3.7.3,<4.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
elasticsearch = ">=9.0.1,<10.0.0"
s3fs = ">=2025.5.1,<2026.0.0"
graphviz = ">=0.20.3,<0.21.0"
kafka-python = ">=2.2.11,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"


[tool.poetry.group.dev.dependencies]
# 이 부분은 이미 올바른 형식이었습니다.
ipykernel = "^6.29.5"


[build-system]
# 이 부분도 그대로 유지합니다.
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"