[tool.poetry]
name = "reciping-data-pipeline"
version = "0.1.0"
description = "Data pipeline for reciping service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# ⬇️ ETL 실행에 필수적인 라이브러리 ⬇️
python = ">=3.11"
pyspark = "3.5.1"
boto3 = "^1.40.2"
awscli = "^1.42.2"
pyarrow = ">=20.0.0,<21.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
trino = "^0.336.0"

[tool.poetry.group.dev.dependencies]
# ⬇️ 로컬 개발 환경에서만 필요한 라이브러리 ⬇️
ipykernel = "^6.29.5"

[tool.poetry.group.datagen.dependencies]
# ⬇️ 데이터 생성(.ipynb)에만 필요한 라이브러리 ⬇️
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
requests = ">=2.32.3,<3.0.0"
tenacity = ">=9.1.2,<10.0.0"
tqdm = ">=4.67.1,<5.0.0"
python-dotenv = ">=1.0.0" # dotenv 패키지는 python-dotenv로 이름이 변경되었습니다.
faker = ">=37.1.0,<38.0.0"
sdv = { version = ">=1.20.1,<2.0.0", python = "<3.14" }
beautifulsoup4 = ">=4.13.4,<5.0.0"
requests-html = ">=0.10.0,<0.11.0"
lxml-html-clean = ">=0.4.2,<0.5.0"
selenium = ">=4.32.0,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
category-encoders = ">=2.8.1,<3.0.0"
dask = ">=2025.5.1,<2026.0.0"
distributed = ">=2025.5.1,<2026.0.0"
bokeh = ">=3.7.3,<4.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
elasticsearch = ">=9.0.1,<10.0.0"
graphviz = ">=0.20.3,<0.21.0"
kafka-python = ">=2.2.11,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"